syntax = "proto3";

option csharp_namespace = "cart";

service GrpcCart{
  rpc GetAllCarts (GrpcGetAllCartsRequest) returns (GrpcCartsResponse);
  rpc GetCartByClient (GrpcGetCartRequest) returns (GrpcCartResponse);
  rpc GetCartBySession (GrpcGetCartRequest) returns (GrpcCartResponse);
  rpc UpdateCart (GrpcUpdateCartRequest) returns (GrpcUpdateCartResponse);
}

message GrpcGetAllCartsRequest {}

message GrpcGetCartRequest {
  int32 id = 1;
}

message GrpcUpdateCartRequest {
  GrpcCartModel cart = 1;
}

message GrpcCartsResponse {
  repeated GrpcCartModel carts = 1;
}

message GrpcCartResponse {
  GrpcCartModel cart = 1;
}

message GrpcUpdateCartResponse {
  GrpcCartModel cart = 1;
}

message GrpcCartModel {
  int32 clientId = 2;
  DecimalValue totalPrice = 3;
  repeated GrpcCartItemModel items = 4;
}

message GrpcCartItemModel {
  int32 id = 1;
  int32 productId = 2;
  string productName = 3;
  DecimalValue unitPrice = 4;
  int32 quantity = 5;
  string pictureUrl = 6;
}

message DecimalValue {   
    int64 units = 1;    
    sfixed32 nanos = 2;
}